2017-10-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts.m: Removed incorrect information in header
	text.

	* Mscripts_arts/q2_arts_sensor_parts.m:
	* Mscripts_arts/q2_arts_y.m:
	* Mscripts_arts/q2_oemiter.m: Expanded string given to q2_arts to
	make sure that cfile.rep ends up in workfolder.

	* Mscripts_arts/q2_artscfile_full.m: Removed writing of abs_lines
	to file. Should not be needed and file was anyhow put in local
	folder, not the work one.

	* Mscripts_arts/q2_arts_y.m: Added an optional argument,
	hitran_df. Default maintains old functionality.

2017-10-06  Joakim Möller  <joakim.moller@molflow.com>

	* Build_scripts/compile.sh: Added Mscripts_misc to compilers search
	path

2017-10-04  Fredrik Gustafsson  <fredrik.gustafsson@molflow.com>

	* Build_scripts/create_qsmr_project.sh: Changed from using Jenkins
	to odin.rss.chalmers.se for fetching compiled qsmr.

2017-09-25  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_arts_sensor_parts.m: Now handles
	Q.SIDEBAND_LEAKAGE = 'model'. Removed gfromat option for
	Q.SIDEBAND_LEAKAGE.

	* Mscripts_misc/sband_from_l1b.m: The function assumed l1b to be
	v5. Added small fix to also allow v4 format.

	* Mscripts_webapi/get_scan_aux_data.m: Added fix to handle v5
	data. The Data level is simply removed, and v5 comes out of the
	function in same format as v4.

2017-09-22  Andreas Skyman  <andreas.skyman@molflow.com>

	* Mscripts_misc/sband_from_l1b.m: Added optional argument freq_grid to
	function, which makes it use the supplied freq_grid instead of the ones in
	the L1b struct, as well as use median Tcal, LOFreq and SBPath.  Updated
	comments and names in function to reflect that the function returns
	leakage, not response.

2017-09-07  Joakim Möller  <joakim.moller@molflow.com>

	* Mscripts_webapi/webread_retry: Update to actually retry the GET request
	as many times the input parameter says. Better error reporting.
