@@ -16,7 +16,7 @@
 %                   LOFreq and SBPath values for scan.
 %
 % Created:  2017-08-29  andreas.skyman@molflow.com
-% Updated:  2017-09-22  andreas.skyman@molflow.com
+% Updated:  2017-11-17  andreas.skyman@molflow.com
 %
 % --------
 % [1]:  Post launch characterisation of Odin-SMR sideband filter properties,
@@ -49,7 +49,6 @@ function sb_leakage = sband_from_l1b(l1b, freq_grid)
 
     % Parameters from analysis, possibly overridden in switch below:
     % (N.B.: these parameters are preliminary and will change!)
-    l0_SB = 9.469150e-3;
     temp_coeff = 1.041477e-6;
     T0 = 291.0;
 
@@ -64,11 +63,24 @@ function sb_leakage = sband_from_l1b(l1b, freq_grid)
             r0 = 10.0 ^ (-26.7 / 10.0);
             l0_LO = 0.5 * 38.635e-3;
 
+            % From parameter estimation:
+            l0_SB = 9.469150e-3;
+
+            % Calculated from "The Spread Sheet":
+            % l0_LO = 0.5 * 38.6344711882e-3;
+            % l0_SB = 9.46777457791e-3;
+
         case 17
 
             % From report [1]:
             r0 = 10.0 ^ (-26.7 / 10.0);
             l0_LO = 0.5 * 38.517e-3;
+
+            % From parameter estimation:
+            l0_SB = 9.469150e-3;
+
+            % Calculated from "The Spread Sheet":
+            % l0_SB = 9.46777457791e-3;
 
         case 1
 
@@ -76,20 +88,43 @@ function sb_leakage = sband_from_l1b(l1b, freq_grid)
             r0 = 10.0 ^ (-26.7 / 10.0);
             l0_LO = 0.5 * 38.237e-3;
 
+            % Calculated from "The Spread Sheet":
+            % l0_LO = 0.5 * 38.2363953829;
+            l0_SB = 9.77324838062e-3;
+
         % 549 GHz frontend (experimental):
         case 19
 
             % From report [1]:
-            r0 = 10.0 ^ (-27.7 / 10.0);
+            r0 = 10.0 ^ (-14.4 / 10.0);
             l0_LO = 0.5 * 38.237e-3;
             l0_SB = 0.5 * 19.378e-3;
 
         case 21
 
             % From report [1]:
-            r0 = 10.0 ^ (-27.7 / 10.0);
+            r0 = 10.0 ^ (-14.4 / 10.0);
             l0_LO = 0.5 * 38.237e-3;
             l0_SB = 0.5 * 19.021e-3;
+
+        case 2
+
+            % From report [1]:
+            r0 = 10 ^ (-14.4 / 10.0);
+
+            % Calculated from "The Spread Sheet":
+            l0_LO = 0.5 * 38.5327444025e-3;
+            l0_SB = 9.56785493557e-3;
+
+        % 555 GHz frontend (experimental):
+        case 13
+
+            % From report [1]:
+            r0 = 10 ^ (-14.8 / 10.0);
+
+            % Calculated from "The Spread Sheet":
+            l0_LO = 0.5 * 38.2132275512;
+            l0_SB = 9.65740372371;
 
         otherwise
 
