@@ -1,3 +1,7 @@
+2017-09-22  Andreas Skyman  <andreas.skyman@molflow.com>
+
+	* Mscripts_misc/sband_from_l1b.m: Added settings for FMs 1, 2 and 13
+
 2017-10-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Mscripts_arts/q2_arts.m: Removed incorrect information in header
